--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.scss
@@ -11,3 +11,20 @@
   }
 
 
+
+  .nav-primary.active {
+    color: #275228;
+    font-weight: 1000 !important;
+    background-color: yellow;
+    //font-weight:bolder;
+  
+  }
+  
+  
+  .background-lightgray{
+    background-color: #f8f8f8;
+  }
+  
+  .card-margin{
+    margin:10px;
+  }
