--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -15,90 +15,230 @@
 </ion-header>
 
 <ion-content *ngIf="!isDesktop">
-  <ion-card mode="ios" >
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+    <ion-row >
+      <ion-col size="12"  >
+  <!-- HEADER MOBILE-->
+<ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
 
-    <div *ngFor="let x of data">
-        <ion-list> 
-          <ion-item lines="none">
-            <!--ion-avatar slot="start">
-          <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
-        </ion-avatar-->
-            <ion-avatar slot="start">
-              <chh-app-text-avatar [text]="x.last_name" [color]=""></chh-app-text-avatar>
-            </ion-avatar>
-            <ion-label>
-              <ion-item class="ion-no-padding ">
-                <h2 class="ion-text-wrap" style="padding-top: 20px;">
-                  <b>{{x.last_name}}, {{x.first_name}} {{x.middle_name}}</b>
-                </h2>
-                <ion-badge
-                  color="warning"
-                  slot="end"
-                  *ngIf="x.admission_status == 'DN' && x.doctor_prof_fee == null && x.is_posted ==null"
-                >
-                  PF</ion-badge
-                >
-                <ion-badge
-                  color="success"
-                  slot="end"
-                  *ngIf="x.doctor_prof_fee != null && x.is_posted !=null"
-                >
-                  PF OK</ion-badge
-                >
-              </ion-item>
-              <div class="ion-text-wrap" style="padding-top: 5px;">
-                <div *ngIf="x.site == 'C'">
-                  <ion-icon name="location-outline" slot="start"></ion-icon>
-                  Chong Hua Hospital
-                </div>
-                <div *ngIf="x.site == 'M'">
-                  <ion-icon name="location-outline" slot="start"></ion-icon>
-                  Chong Hua Hospital Mandaue
-                </div>
-                <div>
-                  <ion-icon name="bed-outline" slot="start"></ion-icon>
-                  Room {{x.room_no}}<br />
-                  <ion-icon name="clipboard-outline" slot="start"></ion-icon>
-                  as {{x.Doctor_Status}}<br />
-                  <ion-chip *ngIf="x.admission_status == 'AC'">
-                    <ion-label color="mango"><b>Admitted</b></ion-label>
-                  </ion-chip>
-    
-                  <!-- <ion-badge *ngIf="data.admission_status == 'AC'"
-                color="mango"
-                slot="end">
-                Admitted
-              </ion-badge> -->
-    
-                  <ion-chip *ngIf="x.admission_status == 'DN'">
-                    <ion-label color="mango"><b>For Discharge</b></ion-label>
-                  </ion-chip>
-    
-                  <!-- <ion-badge *ngIf="data.admission_status == 'DN'"
-                color="mango"
-                slot="end">
-                For Discharge
-              </ion-badge> -->
-                </div>
-              </div>
-            </ion-label>
+<div *ngFor="let x of data">
+    <ion-list > 
+      <ion-item lines="none">
+        <!--ion-avatar slot="start">
+      <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+    </ion-avatar-->
+    <!--ion-avatar slot="start">
+      <chh-app-text-avatar [text]="x.last_name" [color]=""></chh-app-text-avatar>
+    </ion-avatar-->
+        <ion-label>
+          <ion-item class="ion-no-padding ">
+            <!--h2 class="ion-text-wrap" style="padding-top: 20px;"-->
+            <h2 class="ion-text-wrap" >
+              <b>{{x.last_name}}, {{x.first_name}} {{x.middle_name}}</b>
+            </h2>
+            <ion-badge
+              color="warning"
+              slot="end"
+              *ngIf="x.admission_status == 'DN' && x.doctor_prof_fee == null && x.is_posted ==null"
+            >
+              PF</ion-badge
+            >
+            <ion-badge
+              color="success"
+              slot="end"
+              *ngIf="x.doctor_prof_fee != null && x.is_posted !=null"
+            >
+              PF OK</ion-badge
+            >
           </ion-item>
-          <ion-item lines="none" style="padding-bottom: 10px;">
-            <div class="ion-text-wrap">
-              <!-- <ion-text *ngIf="data.admission_status == 'AC'">Status : Admitted </ion-text>  -->
-    
-              <!-- <ion-text *ngIf="data.admission_status == 'DN'">Status : For Discharge<br /></ion-text> -->
-              <ion-icon name="calendar-outline"></ion-icon
-              ><ion-text> Admission Date : {{dateAdmitted}}</ion-text>
+          <div class="ion-text-wrap" style="padding-top: 5px;">
+            <div *ngIf="x.site == 'C'">
+              <ion-icon name="location-outline" slot="start"></ion-icon>
+              Chong Hua Hospital
             </div>
-          </ion-item>
-         </ion-list>
+            <div *ngIf="x.site == 'M'">
+              <ion-icon name="location-outline" slot="start"></ion-icon>
+              Chong Hua Hospital Mandaue
+            </div>
+            <div>
+              <ion-icon name="bed-outline" slot="start"></ion-icon>
+              Room {{x.room_no}}
+              <!--ion-icon name="clipboard-outline" slot="start"></ion-icon>
+              as {{x.Doctor_Status}}<br />
+              <ion-chip *ngIf="x.admission_status == 'AC'">
+                <ion-label color="mango"><b>Admitted</b></ion-label>
+              </ion-chip>
+              <ion-chip *ngIf="x.admission_status == 'DN'">
+                <ion-label color="mango"><b>For Discharge</b></ion-label>
+              </ion-chip-->
+            </div>
+          </div>
+        </ion-label>
+      </ion-item>
+      <ion-item lines="none" style="padding-bottom: 10px;">
+        <div class="ion-text-wrap">
+          <!-- <ion-text *ngIf="data.admission_status == 'AC'">Status : Admitted </ion-text>  -->
+
+          <!-- <ion-text *ngIf="data.admission_status == 'DN'">Status : For Discharge<br /></ion-text> -->
+          <ion-icon name="calendar-outline"></ion-icon
+          ><ion-text> Admission Date : {{dateAdmitted}}</ion-text>
         </div>
-    
-    
-      </ion-card>
+      </ion-item>
+     </ion-list>
+    </div>
+  </ion-card>
+</ion-col>
+</ion-row>
+</ion-grid>
+
+<app-chh-app-card-newline></app-chh-app-card-newline>
+
+<!--
+ _____                                                    
+|_   _|                                                   
+  | |   _ __   ___  _   _  _ __   __ _  _ __    ___   ___ 
+  | |  | '_ \ / __|| | | || '__| / _` || '_ \  / __| / _ \
+ _| |_ | | | |\__ \| |_| || |   | (_| || | | || (__ |  __/
+ \___/ |_| |_||___/ \__,_||_|    \__,_||_| |_| \___| \___|
+                                                          
+                                                          
+-->                                             
+                           
+
+
+
+
+
+
+
+
+
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+<ion-row >
+
+<ion-col size="6" offset="3"  >
+
+<div class="vertical-center">
+  <div class="center">
+    <ion-img src="../../../../assets/img/{{method1}}.JPG" class="ion-align-self-end"></ion-img>
+  </div>   
+</div>
+</ion-col>
+
+</ion-row>
+
+
+</ion-grid>
+
+
+
+
+
+
+
+<app-chh-app-card-newline></app-chh-app-card-newline>
+
+
+
+
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+    <ion-row >
+      <ion-col size="12"  >
+        <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
+          <!-- Default List Header 
+          <ion-list-header>
+            <h4>Are you also an Insurance Coordinator?</h4>
+          </ion-list-header>
+          <ion-item>
+            <ion-toggle  ></ion-toggle> 
+          </ion-item>
+            -->
+
+          <ion-item>
+            <ion-label>Are you a Insurance Coordinator?</ion-label> 
+            <ion-checkbox color="mango" checked="false"></ion-checkbox>
+            </ion-item>
+
+
+
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+
+
+
+
+  <app-chh-app-card-newline></app-chh-app-card-newline>
+
+
+
+
+
+
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+    <ion-row >
+      <ion-col size="12"  >
+        <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
+          <!-- Default List Header 
+          <ion-list-header>
+            <h4>Are you also an Insurance Coordinator?</h4>
+          </ion-list-header>
+          <ion-item>
+            <ion-toggle  ></ion-toggle> 
+          </ion-item>
+            -->
+
+            <ion-item>
+              <ion-label>&#8369; </ion-label>
+              <ion-input></ion-input>
+            </ion-item>
+
+
+
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </ion-content>
 
+<ion-footer class="ion-no-border" *ngIf="!isDesktop">
+  <ion-toolbar>
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+        <ion-col size-xs="12" size-md="4" size-lg="4">
+          Status
+          <ion-progress-bar value="0.5"></ion-progress-bar>
+        </ion-col>
+        <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+
+</ion-footer>
 
 
 
@@ -191,24 +331,122 @@ ______          _    _
     <li>
       <a >{{method}}</a>
     </li>
-    
   </ul>   
+
+
 
   <ion-grid class="ion-no-padding">
     <ion-row>
+
+
+      <ion-col  size-md="1" ></ion-col>
+      <ion-col  size-md="3" >
+
+
+
+
+
+
+        <app-chh-app-patient-header 
+        [data]="data" [dateAdmitted]="dateAdmitted"
+      ></app-chh-app-patient-header>
+
+      </ion-col>
+
+
+
+
+      <ion-col size-md="4" >
+
+
+
+
+
+  
+
+
+        <ion-grid class="ion-no-padding " aria-disabled="true">
+          <ion-row >
+            <ion-col size="12"  >
+              <ion-card class="card-margin ">
+        
+            <!--ion-list-header>
+              Have You seen this patient?
+            </ion-list-header>
+        
+            <ion-item>
+              <ion-toggle  [(ngModel)]="yesnoToggle"  (ionChange)="viewtoggle()"></ion-toggle> {{yesno}}
+            </ion-item-->
+        
+           
+            <ion-item>
+              <ion-label  class="ion-text-wrap">Have you seen this patient?</ion-label> 
+
+              </ion-item>
+              <ion-segment (ionChange)="segmentChanged($event)" [(ngModel)]="isPatientSeen">
+                <ion-segment-button value="yes">
+                  <ion-label>Yes</ion-label>
+                </ion-segment-button>
+                <ion-segment-button value="o" style="width: 10px;" hidden ></ion-segment-button>
+                <ion-segment-button value="n">
+                  <ion-label>No</ion-label>
+                </ion-segment-button>
+              </ion-segment>
+
+
+
+          </ion-card>
+          </ion-col>
+          </ion-row>
+        </ion-grid>
+
+
+
+      </ion-col>
+   
+      <ion-col size-md="3" >
+
+    
+
+        <ion-grid   class="ion-no-padding ">
+          <ion-row >
+          <ion-col size="6" offset="3"  >
+          <div class="vertical-center">
+            <div class="center">
+              <ion-img src="../../../../assets/img/{{method1}}.JPG" class="ion-align-self-end"></ion-img>
+              <h3>{{method}}</h3>
+            </div>   
+          </div>
+          </ion-col>
+          </ion-row>
+          </ion-grid>
+      </ion-col>
+      <ion-col size-md="1" ></ion-col>
 
     </ion-row>
   </ion-grid>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </ion-content>
-
-
-
-
 <ion-footer class="ion-no-border" *ngIf="isDesktop">
-  <ion-toolbar>
+  <!--sion-toolbar>
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col size="12" *ngIf="isDesktop">
@@ -218,5 +456,10 @@ ______          _    _
         </ion-col>
       </ion-row>
     </ion-grid>
-  </ion-toolbar>
+  </ion-toolbar-->
+
+
+  <div class="footer tab-font-family"  *ngIf="isDesktop">
+    <span>{{this.constants.CHH_NAME__VALUE__CEBU}}</span>
+  </div>
 </ion-footer>
