fixed dark mode

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -21,7 +21,7 @@
 </ion-header>
 
 <ion-content *ngIf="!isDesktop">
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
     <ion-row >
       <ion-col size="12"  >
   <!-- HEADER MOBILE-->
@@ -107,7 +107,7 @@
 <app-chh-app-card-newline></app-chh-app-card-newline>
 
 
-<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray" aria-disabled="true">
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " aria-disabled="true">
   <ion-row >
     <ion-col size="12"  >
       <ion-card class="card-margin ">
@@ -133,7 +133,7 @@
 
 <app-chh-app-card-newline></app-chh-app-card-newline>
 
-<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
   <ion-row >
     <ion-col size="12"  >
       <ion-card class="card-margin ">
