--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -15,7 +15,7 @@
 </ion-header>
 
 <ion-content *ngIf="!isDesktop">
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
     <ion-row >
       <ion-col size="12"  >
   <!-- HEADER MOBILE-->
@@ -113,7 +113,7 @@
 
 
 
-<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
 <ion-row >
 
 <ion-col size="6" offset="3"  >
@@ -141,7 +141,7 @@
 
 
 
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
     <ion-row >
       <ion-col size="12"  >
         <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
@@ -178,7 +178,7 @@
 
 
 
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
+  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
     <ion-row >
       <ion-col size="12"  >
         <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
